# IWOD

./: README.md  eval_ckpts.py  evaluate.py  pyproject.toml  train_kitti.py  train_lcod.py
config/: train_cam2_cam0.yaml  train_cam2_cam0_cam3.yaml  train_cam2_cam0_cam3_cam1.yaml  train_cam2_cam3.yaml  train_lcod.yaml
config/kitti_config/: val_test.txt  val_val.txt
config/lcod_config/: train.txt  val.txt
dataset/: kitti_multiview_detection.py  lake_constance_detection.py
eval_kitti/: eval.py
iou_utils/: box_intersection_2d.py  oriented_iou_loss.py
iou_utils/cuda_op/: setup.py
kitti_tools/: create_dataset.ipynb  kitti_val_split.ipynb
lcod_tools/: hdf5_extractor.py
model/: lightning_module.py  loss.py  submodules.py
notebooks/: eval_cam2_cam0.ipynb
src/iwod/dataset/: lake_constance_detection.py
src/iwod/eval_kitti/: eval.py  evaluate.py  rotate_iou.py  utils.py
src/iwod/eval_lcod/: eval.py
src/iwod/iou_utils/: box_intersection_2d.py  oriented_iou_loss.py
src/iwod/model/: inverse_warp.py  lightning_module.py  loss.py  predict.py  submodules.py
src/iwod/utils/: helper.py  transforms.py  waterplane.py
utils/: transforms.py
