[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iwod"
version = "0.1.0"
description = "Code for inland water detection"
authors = [
  { name="Dennis Griesser", email="dgriesse@htwg-konstanz.de" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]